--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex Rivera - Full Stack Developer</title>
+    <title>Abdurrahman Alhassan - Full Stack Developer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <div class="floating-shape">💻</div>
         <div class="floating-shape">⚡</div>
         <div class="hero-content">
-            <h1>Alex Rivera</h1>
+            <h1>Abdurrahman Alhassan</h1>
             <p>Full Stack Developer & UI/UX Designer</p>
             <a href="#about" class="cta-button">Discover My Work</a>
         </div>
@@ -209,4 +209,5 @@
 </footer>
       <script src="script.js"></script>
 </body>
+
 </html>
